took some of heather's comments on the client design thingy into account - still to tackle the confusing paragraph though :P

--- a/TP3/dissertation/Design/client.tex
+++ b/TP3/dissertation/Design/client.tex
@@ -12,7 +12,7 @@ In designing the client, we had the high level aim of creating a modular system 
 
 It was agreed that the MVC (Model-View-Controller) architectural pattern, widely used for applications involving a graphical user interface, was a useful model to base our discussions around. This model abstracts the UI (view) from the back end of the system. When a user performs an action, the controller updates the model if any data associated with the system is changed, and updates the viewer to reflect these changes in the system state. This seemed appropriate to our needs of keeping and displaying an up-to-date record of the user's friend list and creating an interface, and would allow us to split responsibilities between the back and front end of the GUI.
 
-However, we faced challenges in creating an additional networking component to implement the GIM protocol into this framework. We had the choice to conceptualise it as either an additional interface, which `viewed' changes to the model, or indirectly (by way of the network) as a part of the controller component. [discussion about possible merits of both goes here] We decided it would be useful to treat the networking code as part of the controller, as it would be modifying the model based on the server's response to its calls, and modifying the GUI to reflect these changes.
+However, we faced challenges in adapting an additional networking component to implement the GIM protocol into this framework. We had the choice to conceptualise it as either an additional interface, which `viewed' changes to the model, or indirectly (by way of the network) as a part of the controller component. [discussion about possible merits of both goes here] We decided it would be useful to treat the networking code as part of the controller, as it would be modifying the model based on the server's response to its calls, and modifying the GUI to reflect these changes.
 	
 This high level approach allowed us to draw boundaries between components and assign the more detailed design of individual components to team members. We decided a logical split would be to assign two members to the networking aspects of the system (client and server), and two members to the GUI components of the system (the GUI and its model). However, further collaboration was required as it became more evident what was required for each component, as will be discussed.
 
@@ -41,9 +41,9 @@ The view required that the user's own state information (such as status and nick
 
 \subsection {Viewer}
 
-After some interface design work (which will be discussed in coming sections), it was apparent that the system had to support two different styles of chat windows: a group chat and a chat with a single user. However, there were some observable commonalities between both windows, such as sending messages, displaying incoming messages, and using very similar Java Swing components to handle this functionality. At the same time, there was enough differing behaviour between the two windows to justify having two different classes to handle them, such as the group chat's need to maintain a list of users in the room. With this in mind, we designed our class structure code dealing with the interface to have a super class named ChatWindow, outlining this common functionality, which two sub classes called GroupChatWindow and SingleChatWindow which would extend this super class. [except we chose this later, initially they were the same class, then separate classes, then a super->sub class pattern... another change to discuss, maybe?]%footnote for java swing?
+After some interface design work (which will be discussed in coming sections), it was apparent that the system had to support two different styles of chat windows: a group chat and a chat with a single user. However, there were some observable commonalities between both windows, such as sending messages, displaying incoming messages, and using very similar Java Swing components to handle this functionality. At the same time, there was enough differing behaviour between the two windows to justify having two different classes to handle them, such as the group chat's need to maintain a list of users in the room. With this in mind, we designed our class structure code dealing with the interface to have a super class named ChatWindow, outlining this common functionality, which two sub classes called GroupChatWindow and SingleChatWindow which would extend this super class. 
 
-We anticipated this would be advantageous as it would reduce the repetition of code and keep functionality consistent between the two windows. We felt in particular that the panel displaying incoming images would change in formatting messages, as the project would evolve to include some of our possible features, such as the implementation of emoticons and font colours (See section x.y). [this last sentence is confusing... reword?]
+We anticipated this would be advantageous as it would reduce the repetition of code and keep functionality consistent between the two windows. We felt this consistency would be important, as our code using the Swing components used to display messages would evolve, or need configuring, as we implementing some of our 'should have' features (such as emoticons and font colours.) Therefore, it would be crucial for the displaying of messages in Group Chat and SingleChat windows to remain consistent.
 
 \includegraphics[scale=0.65]{Design/diagrams/chatwin.png}
 
