rewrote the confusing paragraph

--- a/TP3/dissertation/Design/client.tex
+++ b/TP3/dissertation/Design/client.tex
@@ -22,11 +22,11 @@ This high level approach allowed us to draw boundaries between components and as
 
 \subsection {Controller}
 
-The controller was one of the more challenging parts of the design process. The controller would be called by both the networking component and the viewer, implying that its operations must be thread safe. We were constrained by our use of the Java Swing\footnote{See \texttt{http://download.oracle.com/javase/6/docs/technotes/guides/swing/} for more information.} environment, which we had learned from previous experience will freeze if the networking code is run on the GUI thread. A further complexity was handling the boundary between the requirements of the network code and the protocol that was being handled by the networking code. Naturally, the GUI architects should not need to concern themselves with the specifics of the protocol while designing the GUI. 
+The controller was one of the more challenging parts of the design process. The controller would be called by both the networking component and the viewer, implying that its operations must be thread safe. We were constrained by our use of the Java Swing\footnote{See \texttt{http://download.oracle.com/javase/6/docs/technotes/guides/swing/} for more information.} environment, which we had learned from previous experience will freeze if the networking code is run on the GUI thread. A further complexity was ensuring that the controller could use the commands of the GIM protocol, without having to know its workings in detail. Naturally, the GUI architects should not need to concern themselves with the specifics of the protocol while designing the GUI.
 
 To deal with the threading complexity, we designed a scheme with an intermediate buffer between the controller component and the networking code. The controller thread waits until there is a command from the network placed into the buffer, and acts accordingly on the model and GUI. Furthermore, when the controller component needs to call the network, it places a command into the buffer to be interpreted by the networking code. We believed this scheme to be appropriate as the controller could either call the network from internal code or events from the GUI (possibly simultaneously).\footnote{See networking design section(***use labels here***) for further discussion on the motivation behind this buffer.}
 
-[confusing] To deal with the design complexity of the boundary, we decided that initially, an interface would be written by the networking architects to describe the requirements of the GIM protocol of the client from the controller. The controller would then implement this interface. This allowed the requirements from the client to be understood, without having to understand the inner workings of the protocol. Furthermore, the structure of the protocol could change, without any change to the interface or consultation with the GUI architects. The networking architect would write a method in the controller class to parse incoming commands to call the methods described by the interface as appropriate. For outgoing commands to the server, an interface outlining possible calls to the server would be written by the architect to be called by the controller. [/confusing (restructure sentences, basically)]
+To deal with the design complexity of abstracting the protocol from the controller's use of its commands, the network architects designed two Java Interfaces, describing the function of methods using java doc. One interface contained method stubs concerning incoming commands from the server, and the other methods that could be called to send commands to the server. This allowed other team members to understand what the controller must do to implement the GIM protocol, without having to understand the inner workings of the protocol. This had the additional advantage of allowing the structure of the protocol to change, without having to change the interface, or consult those team members working on other areas of the GUI. A further provision to remove the responsibility of having to understand the protocol was the inclusion of a parsing method in the controller class the networking architects would write, to parse incoming messages from the server and call the appropriate method. The methods called would could be written by any team member. The networking architects would then be responsible for implementing the methods in the interface for outgoing commands to the server. 
 
 note: not final version
 \includegraphics[scale=0.65]{Design/diagrams/buffer.png}
