Changed the server design section round a little. Added a section about synchronisation and tried to explain everything in more details

--- a/TP3/dissertation/Design/protocol.tex
+++ b/TP3/dissertation/Design/protocol.tex
@@ -136,7 +136,7 @@ A prime example of this is the \texttt{:FRIEND:} command. What was originally 6 
 
 There are still some commands which could arguably benefit from being merged. For example, it would make sense for the \texttt{:LOGOUT:} command to be part of the \texttt{:AUTH:} command which allows clients to login and register; all of these actions are conceptually similar. However, the \texttt{:LOGOUT:} command is not available unless the user is in the logged-in state, so one could argue that it should not be part of the \texttt{:AUTH:} command. The decision to keep them separate was made purely on personal preference as there were no clear advantages for either choice. 
 
-During the implementation of GIM, there were several modifications made to the format of the data segment for some commands. These were brought on by a desire to keep the protocol consistent across all commands. There was often a sense of confusion about how the data segment for each command was split into sections as each command had a different format; some used newlines, some used commas, and some used spaces as separators. In the end we chose to use spaces as separators in all commands except the \texttt{:INFO:} command where newlines made more sense. 
+During the implementation of GIM there were several modifications made to the format of the data segment for some commands. These were brought on by a desire to keep the protocol consistent across all commands. There was often a sense of confusion about how the data segment for each command was split into sections as each command had a different format; some used newlines, some used commas, and some used spaces as separators. In the end we chose to use spaces as separators in all commands except the \texttt{:INFO:} command where newlines made more sense. 
 
 (Something about errors and how to improve the current situation)
 
