--- a/TP3/dissertation/Evaluation/evaluation.tex
+++ b/TP3/dissertation/Evaluation/evaluation.tex
@@ -1,6 +1,8 @@
 \chapter{Evaluation}
 \label{evaluation}
 
+\input{Overview/overview.tex}
+
 \input{Evaluation/server.tex}
 
 \input{Evaluation/client.tex}
