More GUI design

--- a/TP3/dissertation/Design/client.tex
+++ b/TP3/dissertation/Design/client.tex
@@ -51,18 +51,20 @@ We anticipated this would be advantageous as it would reduce the repetition of c
 \subsection{Design of GUI}
 
 As we had decided to incorporate both group and one-to-one chats, this provided a wide scope in terms of interface design. We had the option to base our interface on either IRC or Windows Live Messenger style clients, or to create something entirely of our own. Windows Live was ultimately selected as the basis of the GUI for a number of reasons; primarily we believed that it was better suited to our feature set. An IRC style interface would require a considerable amount of redesigning to accommodate features such as display pictures, contact lists, and offline messaging. While creating our own style of IM interface would be interesting, it would likely lead to an inferior design, and be more time consuming to create. Windows Live style programs typically integrate the vast majority--if not all--of our MoSCoW feature set, and was therefore chosen as our starting point.
- 
-After we had decided the basic form of the interface, we created a number of use cases for the client interactions.
 
+\subsubsection{Aims}
+
+With any user interface, the primary goal is usability. As instant messengers have existed for a number of years, there is a standard layout which users expect, and are comfortable with. The goal of our GUI was to provide a simple and intuative interface, without changing what users would expect from an IM application.  
+ 
 \subsubsection{Example Use Cases}
 
-The following are examples of key use cases as defined during the design process. These have not been altered for inclusion within this document.
+The GIM use cases were created in order to provide an easily understood reference for how the system should operate at a high layer of abstraction. The following are examples of key use cases as defined during the design process. Two actors were identified for the system; ``Senders'' and ``Contacts''. Both of these actors have equal rights within the system, and use the system in the same way, hence both derive from the ``User'' type. This distinction between senders and contacts is made for the design process, as in reality users of the system are both senders and contacts. These use cases have not been altered slightly for inclusion within this document.
 
 {\bf Add contact}
 User clicks the ``add contact'' button in the main window, or the option from the top menu. They are prompted to enter their friend's email. They enter the email and the system searches for that person in the database. If found, the contact is sent a request for friendship. If the contact accepts, then both the user and contact now have each other as contacts, and they show up in the main window. If not accepted, neither is added. If the contact is not found, they are prompted again to enter the email, with the option to cancel.
 
 {\bf Group Chat}
-User can choose to group chat from the main window button, main menu, or in a chat window with another contact. A window will show up in which the user can create a chatroom, and then the user will be prompted to choose the contacts they wish to invite. The chatroom appears to the user. Those contacts will see the invitation, and if they accept, will be placed in the chatroom. Contacts will be able to invite other people as well. The chatroom will disappear once every user has left.
+Sender can choose to group chat from the main window button, main menu, or in a chat window with another contact. A window will show up in which the sender can create a chatroom, and then the sender will be prompted to choose the contacts they wish to invite. The chatroom appears to the sender. Those contacts will see the invitation, and if they accept, will be placed in the chatroom. Contacts will be able to invite other people as well. The chatroom will disappear once every user has left.
 
 {\bf Log Out}
 User clicks the ``log out'' option in the menu. The X in the corner will only minimize the program. A dialog box appears, asking if they are sure they want to log out. If yes, they are logged out, and the log in/register pop-up appears. If they want to quit the program completely, they will have to choose ``quit'' from the menu.
@@ -75,4 +77,12 @@ The use of informal notation for the use cases was, in retrospect, ill-conceived
 
 With the use cases, we started to design a GUI which could accommodate the desired features. Although many UI sketches were made, they were all minor variations on the core design which we derived from the traditional Windows Live Messenger model.
 
+\includegraphics[scale=0.65]{Design/diagrams/Main UI.png}
 
+This is the wireframe for the main window the user will see after they have logged in. The layout is typical of instant messenger programs, and represents what users would expect to see.
+
+\includegraphics[scale=0.65]{Design/diagrams/Chat Box.png}
+
+This wireframe represents the window which is created when a chat is initiated, either by themselves or another user. The chat box has a similar layout to the main window, to aid consitency. The user details are at the top, the main body of content is in the middle, and the user operations are at the bottom.
+
+These wireframes served as the basis for the Swing implementation. While the features of the final interface are unchanged from the wireframes, some slight alterations were made to the layout. These modifications were typically the result of the practicalities of using Swing and the natural evolution during implementation. Examples of these alterations are the removal of buttons for emoticons, file transfer, and group chat, and a different position for the status icons in the main window.
